# src/api/v1/auth/controller/loginOrRegisterWithGoogle.js
@@ -2,8 +2,8 @@ const authService = require("../../../../service/auth");
 
 const loginOrRegisterWithGoogle = async (req, res, next) => {
   try {
-    const { query } = req;
-    const { id_token, access_token } = query;
+    // const { query } = req;
+    const { id_token, access_token } = body;
     const { user, accessToken, refreshToken, code } =
       await authService.loginOrRegisterWithGoogle.IdToenVerify({
         id_token,
