# src/api/v1/auth/controller/registerWithGoogle.js
@@ -2,8 +2,8 @@ const authService = require("../../../../service/auth");
 
 const registerWithGoogle = async (req, res, next) => {
   try {
-    const { query } = req;
-    const { id_token, access_token } = query;
+    // const { query } = req;
+    const { id_token, access_token } = body;
     const { user, accessToken, refreshToken } =
       await authService.registerWithGoogle.IdToenVerify({
         id_token,
